Designed header, but the navbar needs more attention

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
   --color-grey: #AAAAAA;
   --color-white: #FFFFFF;
   --color-dblue: #032A4A;
+  --color-dlblue: #3282B8;
+  --color-lblue: #07A2DA;
+  --color-llblue: #DBE2EF;
 }
 
 * {
