--- a/src/App.css
+++ b/src/App.css
@@ -53,8 +53,8 @@
 }
 
 .custom__button {
-  background-color: var(--color-crimson);
-    color: var(--color-black);
+  background-color: var(--color-llblue);
+    color: var(--color-dblue);
     font-family: var(--font-base);
     font-weight: 700;
     letter-spacing: 0.04em;
@@ -69,7 +69,7 @@
 
 .p__cormorant {
   font-family: var(--font-base);
-  color: var(--color-white);
+  color: var(--color-dlblue);
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
@@ -80,7 +80,7 @@
 
 .p__opensans {
   font-family: var(--font-alt);
-  color: var(--color-white);
+  color: var(--color-dlblue);
   font-weight: 400;
   letter-spacing: 0.04em;
   text-transform: capitalize;
@@ -90,14 +90,14 @@
 
 .headtext__cormorant {
   font-family: var(--font-base);
-  color: var(--color-golden);
+  color: var(--color-dlblue);
   font-size: 64px;
   line-height: 83.2px;
   letter-spacing: 0.04em;
   text-transform: capitalize;
 }
 
-.spoon__img {
+.hands__img {
   width: 45px;
 }
 
@@ -118,7 +118,7 @@
     line-height: 210px;
   }
 
-  .spoon__img {
+  .hands__img {
     width: 80px;
   }
 }
