--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -41,6 +41,7 @@
 
 .app__navbar-smallscreen {
     display: none;
+    cursor: pointer;
 }
 
 .app__navbar-smallscreen_overlay {
@@ -50,28 +51,61 @@
     width: 100%;
     height: 100vh;
     background: var(--color-dblue);
-    transition: 0.5s ease;
+    transition: 0.7s ease;
 
     flex-direction: column;
     z-index: 5;
 }
 
 .app__navbar-smallscreen_overlay .overlay__close {
-    font-size: 27px;
+    font-size: 35px;
     color: var(--color-white);
     cursor: pointer;
 
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 25px;
+    right: 25px;
 }
 
-@media screen and (max-width: 1150px) {
+.app__navbar-smallscreen_links {
+    list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+    margin: 3rem;
+    cursor: pointer;
+    color: var(--color-white);
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover {
+    color: var(--color-grey)
+}
+
+@media screen and (max-width: 2000px) {
+    .app__navbar-logo img {
+        width: 210px;
+    }
+}
+
+@media screen and (max-width: 1050px) {
     .app__navbar-links {
        display: none;
     }
 
     .app__navbar-smallscreen {
         display: flex;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__navbar {
+        padding: 1rem;
+    }
+
+    .app__navbar-logo img {
+        width: 110px;
     }
 }
