--- a/src/App.css
+++ b/src/App.css
@@ -59,9 +59,9 @@
     font-weight: 700;
     letter-spacing: 0.04em;
     line-height: 28px;
-    font-size: 16px;
-    padding: 0.5rem 1.5rem;
-    border-radius: 1px;
+    font-size: 18px;
+    padding: 0.7rem 1.5rem;
+    border-radius: 3px;
     border: none;
     outline: none;
     cursor: pointer;
@@ -97,7 +97,7 @@
   text-transform: capitalize;
 }
 
-.hands__img {
+.perilica__img {
   width: 45px;
 }
 
@@ -118,12 +118,12 @@
     line-height: 210px;
   }
 
-  .hands__img {
+  .perilica__img {
     width: 80px;
   }
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1050px) {
   .app__wrapper {
     flex-direction: column;
   }
